--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "serve-favicon": "^2.5.0",
+    "slugify": "^1.6.6",
     "stripe": "^13.7.0",
     "tailwindcss-animated": "^1.0.1",
     "tw-elements-react": "^1.0.0-alpha1",
